loosely restructured wireframe for eCommerce

--- a/js/views/view1/cRUDTmpl.html
+++ b/js/views/view1/cRUDTmpl.html
@@ -1,8 +1,8 @@
 <!-- landing -->
 <!-- uses the name/value of directive node of the angular.module object-->
-<div ng-controller="view1Ctrl">
+<div ng-controller="cRUDCtrl">
   <!-- add a header maybe -->
-  <chat-dir room="view1"></chat-dir>
+  <cRUD-dir room="cRUD"></cRUD-dir>
   <!-- <join-team-directive></join-team-directive> -->
   <!-- <join-team-directive></join-team-directive> -->
   <!-- <start-game-directive></start-game-directive> -->
