--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
 }
 body {
   background-color: rgb(116, 92, 67);
-  background-image: url("greenGrasGreySkyWillow.jpg");
+  /*background-image: url("greenGrasGreySkyWillow.jpg");*/
 }
 #centerThatButton{
   height: 10%auto;
   width: 80%;
   max-height: 650px;
   max-width: 475px;
-  background-image: url("croppedGreenWillow.png");
+  /*background-image: url("croppedGreenWillow.png");*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -34,7 +34,7 @@ body {
   width: 80%;
   max-height: 650px;
   max-width: 475px;
-  background-image: url("croppedGreenWillow.png");
+  /*background-image: url("croppedGreenWillow.png");*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -120,7 +120,7 @@ span {
   align-items: center;
   display: inline-block;
 }
-#view2CtrlWrapper {
+#rawDataObjectsCtrlWrapper {
   width: 90%;
   height: 80%;
   display: block;
@@ -184,7 +184,7 @@ span {
   right: 0;
   margin: auto;
 }
-.chatPane {
+.cRUDPane {
   background-color: rgb(255, 230, 209);
   height: 95%;
   top: 0;
@@ -194,13 +194,13 @@ span {
   margin: auto;
   overflow-y: scroll;
 }
-.chatInputBox {
+.cRUDInputBox {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   background-color: rgb(255, 230, 209);
 }
-.chatInput {
+.cRUDInput {
   width: 95%;
   height: 45px;
   background-color: rgb(255, 247, 240);
@@ -210,12 +210,12 @@ span {
   text-decoration: none;
 }
 .ng-scope {}
-.canvasWrapper {
+.dbObjectsWrapper {
   display flex;
   justify-content: center;
   align-items: center;
 }
-#canvasStretch {
+#dbObjectsStretch {
   height: 90%;
   justify-content: center;
   align-items: center;
@@ -224,7 +224,7 @@ span {
   padding: 5%;
   background-color: rgb(173, 161, 141);
 }
-#canvasStretch canvas {
+#dbObjectsStretch dbObjects {
   width: 100%;
   background-color: rgb(255, 255, 240);
   height: 100%;
@@ -306,10 +306,10 @@ span {
     }*/
 
 
-/*border-radius: .5;   a hollow wrapper to round the edges of canvas*/
+/*border-radius: .5;   a hollow wrapper to round the edges of dbObjects*/
 
 
-/*#canvas{
+/*#dbObjects{
   border: 1px solid red;
 }*/
 
